Change md5 to sha256
